# StreamKar-Backend

./: README.md  StreamKarApp.postman_collection.json  pyproject.toml  sample_data.json
app/: helpers.py  llm_setup.py  main.py  schema.py  settings.py  vector_store.py
