[project]
name = "streamkar-faq-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
